# sEMGencoderJEPA

./: .gitignore  CLAUDE.md  README.md  TODO.md  evaluate_ctc.py  pyproject.toml  train_baseline_ctc.py  train_jepa_finetune_ctc.py  train_jepa_pretrain.py
configs/: data_config.json  finetune_from_jepa.yaml  finetune_from_uml.yaml  train_baseline.yaml  train_jepa.yaml  train_uml.yaml
scripts/: evaluate.py  finetune_from_jepa.py  finetune_from_uml.py  precompute_audio.py  precompute_audio_gaddy.py  precompute_raw_emg.py  train_baseline.py  train_jepa.py  train_uml.py  validate_raw_emg_cache.py
semg_jepa/: __init__.py  architecture.py  augmentations.py  cached_dataset.py  config_utils.py  ctc_utils.py  data_utils.py  jepa_utils.py  metrics.py  read_emg.py  unigrams.py  wandb_utils.py
slurm/: evaluate.slurm  finetune_from_jepa.slurm  finetune_from_uml.slurm  precompute_audio.slurm  precompute_audio_gaddy.slurm  precompute_raw_emg.slurm  train_baseline.slurm  train_baseline_cached.slurm  train_jepa.slurm  train_jepa_finetune_cached.slurm  train_jepa_pretrain_cached.slurm  train_uml.slurm  train_uml_gaddy_audio.slurm
uml/: __init__.py  audio_dataset.py  model.py
