[project]
name = "semg-jepa"
version = "0.1.0"
description = "sEMG JEPA + CTC training"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "librosa",
  "soundfile",
  "textgrids",
  "jiwer",
  "Unidecode",
  "tqdm",
  "ctcdecode"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
